fix double border issue if more than 2 ports. Fixes issue #1712

--- a/pkg/shell/shell.css
+++ b/pkg/shell/shell.css
@@ -564,7 +564,6 @@ ul.available-interfaces-group {
 }
 
 .containers-run-portmapping {
-    padding: 4px 4px 3px 4px;
     margin-left: 8px;
 }
 
@@ -583,12 +582,10 @@ ul.available-interfaces-group {
 
 .containers-run-portmapping .form-inline {
     background: #f4f4f4;
-    border: 1px solid #bababa;
+    border-width: 0 1px 1px 1px;
+    border-style: solid;
+    border-color: #bababa;
     padding: 4px;
-}
-
-.containers-run-portmapping .form-inline:last-of-type {
-    border-top: 0;
 }
 
 .containers-run-portmapping .form-inline:first-of-type {
